[gd_scene load_steps=4 format=3 uid="uid://bkii4oevelsai"]

[ext_resource type="Theme" uid="uid://1vstrjh1n4gu" path="res://themes/question.tres" id="1_epxqx"]
[ext_resource type="Script" uid="uid://b1n2gembt6ftr" path="res://questions/multiple_choice.gd" id="1_quvck"]
[ext_resource type="Theme" uid="uid://cr2p7s5fsjbu2" path="res://themes/buttons.tres" id="2_4qy18"]

[node name="MultipleChoice" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_quvck")

[node name="Topic" type="Label" parent="."]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme = ExtResource("1_epxqx")
theme_override_font_sizes/font_size = 16
text = "Topic: "
horizontal_alignment = 1
autowrap_mode = 3

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(700, 0)
layout_mode = 2
theme = ExtResource("1_epxqx")
theme_override_constants/separation = 16

[node name="Question" type="Label" parent="CenterContainer/VBoxContainer2"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_4qy18")
text = "1. Game for the development of media Game for the development of media Game for the development of media Game for the development of media."
horizontal_alignment = 1
autowrap_mode = 2

[node name="Buttons" type="VBoxContainer" parent="CenterContainer/VBoxContainer2"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="Toggle" type="CheckBox" parent="CenterContainer/VBoxContainer2/Buttons"]
layout_mode = 2
text = "First Option"
alignment = 1

[node name="Toggle2" type="CheckBox" parent="CenterContainer/VBoxContainer2/Buttons"]
layout_mode = 2
text = "Second Option"
alignment = 1

[node name="Toggle3" type="CheckBox" parent="CenterContainer/VBoxContainer2/Buttons"]
layout_mode = 2
text = "Third Option"
alignment = 1

[node name="Toggle4" type="CheckBox" parent="CenterContainer/VBoxContainer2/Buttons"]
layout_mode = 2
text = "Fourth Option"
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4

[node name="FeedbackButton" type="Button" parent="CenterContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Feedback"

[node name="CheckButton" type="Button" parent="CenterContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Check"

[node name="NextButton" type="Button" parent="CenterContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Next"

[connection signal="pressed" from="CenterContainer/VBoxContainer2/HBoxContainer/FeedbackButton" to="." method="_on_feedback_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer2/HBoxContainer/CheckButton" to="." method="_on_check_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer2/HBoxContainer/NextButton" to="." method="_on_next_button_pressed"]
